# django-backend-cutter

./: cookiecutter.json
{{cookiecutter.project_name}}-backend/: docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}-backend/config/: urls.py
{{cookiecutter.project_name}}-backend/config/settings/: common.py
{{cookiecutter.project_name}}-backend/docker/dokku/: Dockerfile
