[tool.poetry]
name = "{{cookiecutter.project_name}}-backend"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}}"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "*"
django = "*"
gunicorn = "*"
django-environ = "*"
gevent = "*"
whitenoise = "*"
raven = "*"
djangorestframework = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
werkzeug = "*"
django-debug-toolbar = "*"
ipdb = "*"
pytest-django = "*"
django-extensions = "*"
pytest-isort = "*"
pytest-sugar = "*"
coverage = "*"
django-coverage-plugin = "*"
pytest-cov = "*"
codecov = "*"

[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry>=1.2.0"]
